# timetomeet-rs

./: Cargo.toml  LICENSE  index.html
docs/: CNAME  index-18d9e701a261c6d6.js  index-18d9e701a261c6d6_bg.wasm  index-2e9ed573fe2df948.js  index-2e9ed573fe2df948_bg.wasm  index-58b0440c4d8ea0bf.js  index-58b0440c4d8ea0bf_bg.wasm  index-5fd569c6bcf79331.js  index-5fd569c6bcf79331_bg.wasm  index.html
src/: main.rs  model.rs  utils.rs  views.rs
src/data/: cities.csv
