[package]
name = "time-to-meet"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.18"
serde = { version = "1", features = ["derive"] }
chrono = "0.4"
chrono-tz = "0.5"
simsearch = "0.2"
wasm-bindgen = "0.2"
js-sys = "0.3"

[profile.release]
lto = true
opt-level = 's'
